hphp/test/slow/object/const/missing_no_dynamic.hhas.expectf
Fatal error: Assembler Error: line 9: const class missing ForbidDynamicProps attribute in %s/missing_no_dynamic.hhas on line -1
